test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/static_param.plx
# A function parameter cannot have a storage class
pub fn f(data i: i32) {
    return i
}

pub fn main(none) i32 {
    return f(1)
}
